--- a/css/styles.css
+++ b/css/styles.css
@@ -1,139 +1,10 @@
 @charset "UTF-8";
 
-body {
-    background-color: #eeeeee;
-
-}
-
-* {
-    transition: all ease 0.333s;
-    scroll-behavior: smooth;
-}
-
-*::-webkit-scrollbar {
-    width: 4pt;
-}
-
-*::-webkit-scrollbar-track {
-    background-color: #ddaaffcc;
-    border-radius: 2pt;
-}
-
-*::-webkit-scrollbar-thumb {
-    background-color: #9966cc;
-    border-radius: 2pt;
-}
-
-#div_bg {
-    background-image: url('Riomon.svg');
-    background-attachment: fixed;
-    background-position: 50% 50%;
-    background-repeat: no-repeat;
-    background-size: 80% auto;
-    border-radius: 0pt;
-    opacity: 20%;
-    position: fixed;
-    display: block;
-    top: 0pt;
-    left: 0pt;
-    margin: 0pt;
-    padding: 0pt;
-    box-shadow: none;
-    width: 100%;
-    height: 100%;
-    z-index: -100;
-}
-
-:focus-visible {
-    outline: none;
-}
-
-button {
-    background-color: #eeeeee;
-    border: none;
-    border-radius: 5pt;
-    box-shadow: 0pt 1pt 3pt #66666666;
-    box-sizing: border-box;
-    font-size: 1em;
-    height: 3em;
-}
-
-button:hover,
-button:focus-visible {
-    background-color: #dddddd;
-}
-
-button:active {
-    transform: translateY(2pt);
-    background-color: #cccccc;
-}
-
-button.selected {
-    font-weight: 700;
-}
-
-button.selected:hover,
-button.selected:focus-visible,
-button.selected:active {
-    background-color: inherit;
-}
-
-button.ready:hover,
-button.ready:focus-visible {
-    background-color: #44aa44;
-}
-
-div {
-    border-radius: 5pt;
-    box-shadow: 0pt 1pt 4pt #66666633;
-    background-color: #ffffff99;
-    display: block;
-    padding: 12pt;
-    margin-top: 0.5em;
-    margin-bottom: 0.5em;
-    text-align: center;
-}
-
-div.pad {
-    height: 2em;
-    margin-bottom: 2em;
-    background-color: transparent;
-}
-
-#root_div {
-    border-radius: 10pt;
-    margin: 16pt auto;
-    text-align: center;
-    min-width: 80%;
-    width: 500pt;
-    max-width: 90%;
-
-    overflow: hidden;
-}
-
 div.line_container {
     background-color: transparent;
     display: flex;
     padding: 0;
     box-shadow: none;
-}
-
-#root_div article {
-    --font-size: 1em;
-
-    display: block;
-    user-select: none;
-    background-color: #ffffffcc;
-    margin: 12pt;
-    padding: 24pt 12pt;
-
-    box-sizing: border-box;
-
-    height: 40vh;
-    border-radius: 5pt;
-    border: #33006666 1pt solid;
-
-    overflow: auto;
 }
 
 #root_div #root_page {
@@ -163,41 +34,7 @@ div.line_container {
     padding: 4pt;
     margin: 2pt;
     border-radius: 5pt;
-    background-color: #ffffffcc;
-}
-
-#root_div #root_page #filter_box {
-    background-color: transparent;
-    border: #33006666 1pt solid;
-    border-radius: 5pt;
-    min-height: 2em;
-    height: 2em;
-    line-height: 1.5em;
-    width: 100%;
-    box-sizing: border-box;
-    padding: 6pt;
-    margin: 0pt;
-    font-size: 1em;
-}
-
-#root_div #root_page #root_arts {
-    background-color: transparent;
-    margin: 6pt 0pt;
-    box-sizing: border-box;
-    width: 100%;
-    padding: 0pt;
-}
-
-#root_div #root_page #root_arts button {
-    width: 100%;
-    box-sizing: border-box;
-    background-color: transparent;
-    border: #33006666 1pt solid;
-    margin: 3pt 0pt;
-}
-
-#root_div #root_page #root_arts button.selected {
-    background-color: #cc99ff99;
+    background-color: var(--art-bgcolor, #000000cc);
 }
 
 @media screen and not (min-width: 800px) {
@@ -306,69 +143,6 @@ h3 {
     text-indent: 0;
 }
 
-#header {
-    background-color: #cc99ff;
-    box-shadow: 0pt 2pt 5pt #66339966;
-    border: none;
-    border-radius: 0;
-    color: #ffffff;
-    display: block;
-    position: fixed;
-    float: inline-start;
-    margin: 0pt;
-    width: 100%;
-    top: 0;
-    left: 0;
-    padding: 1em 0em;
-    z-index: 100;
-}
-
-#footer {
-    background-color: #cc99ff;
-    box-shadow: 0pt -2pt 5pt #66339966;
-    border: none;
-    border-radius: 0;
-    color: #ffffff;
-    display: block;
-    position: fixed;
-    float: inline-end;
-    text-align: center;
-    margin: 0pt;
-    width: 100%;
-    bottom: 0;
-    left: 0;
-    padding: 0.3em 0em;
-    z-index: 100;
-}
-
-#footer_pad {
-    margin-bottom: 0;
-}
-
-div.left,
-form {
-    text-align: left;
-}
-
-div.no_padding {
-    padding: 0pt;
-}
-
-div.no_shadow {
-    box-shadow: none;
-}
-
-div.divider {
-    height: 1pt;
-    background-color: #cccccc99;
-    padding: 0pt;
-    margin-top: 1.5em;
-    margin-left: 1em;
-    margin-right: 1em;
-    margin-bottom: -0.5em;
-    box-shadow: none;
-}
-
 h1 {
     font-family: "Noto Serif CJK SC", "思源宋体", "宋体";
     font-size: 2.5em;
@@ -387,105 +161,4 @@ h3 {
     font-size: 1.2em;
     text-align: start;
     text-indent: 2em;
-}
-
-input {
-    transition: all ease-in 0.333s;
-}
-
-input#file_chooser {
-    height: 2em;
-    margin: 10pt;
-}
-
-input#password {
-    border: 1pt solid #cccccc;
-    border-radius: 5pt;
-    font-family: inherit;
-    font-size: 1em;
-    margin: 0 auto;
-    padding: 5pt 10pt;
-    width: 90%;
-}
-
-#head_text {
-    text-align: start;
-    text-indent: 0em;
-    font-size: 1.2em;
-    font-weight: 700;
-    width: 100%;
-    margin: 0pt;
-    margin-inline-start: 2em;
-}
-
-#foot_text {
-    display: flex;
-    position: relative;
-    align-items: center;
-    justify-content: center;
-
-    align-self: center;
-    text-align: center;
-    text-indent: 0em;
-    font-size: 0.8em;
-    margin: 0pt;
-}
-
-select {
-    background-color: #ffffff;
-    border: 1pt solid #cccccc;
-    border-radius: 5pt;
-    font-size: 1em;
-    padding: 4pt 4pt;
-    transition: all ease-in 0.25s;
-    width: 100%;
-}
-
-option:checked {
-    background-color: #ddbbff;
-}
-
-select:hover,
-input#password:hover {
-    border: 1pt solid #9966ff;
-    box-shadow: 0pt 0pt 3pt #9966ff66;
-}
-
-select:focus-visible,
-input#password:focus-visible {
-    box-shadow: 0pt 0pt 5pt #9966ff66, inset 0pt 0pt 2pt #66666633;
-    border: 1pt solid #9966ff;
-}
-
-table {
-    width: 90%;
-    margin: auto;
-}
-
-textarea {
-    resize: none;
-    border: 1pt solid #cccccc;
-    border-radius: 5pt;
-    font-family: inherit;
-    font-size: 1em;
-    margin: 12pt;
-    padding: 5pt 10pt;
-    transition: all ease-in 0.25s;
-}
-
-textarea:hover {
-    border: 1pt solid #9966ff;
-    box-shadow: 0pt 0pt 6pt #9966ff66;
-}
-
-textarea:focus-visible {
-    box-shadow: 0pt 0pt 10pt #9966ff66, inset 0pt 0pt 3pt #66666633;
-    border: 1pt solid #9966ff;
-}
-
-textarea.areas {
-    margin: 0 auto;
-    align-self: center;
-    height: 10em;
-    width: 90%;
 }
