--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,7 @@ div.line_container {
     display: block;
     flex-direction: column;
     align-items: center;
-    padding: 0pt;
+    padding: 0;
     margin: 12pt;
     position: relative;
     box-shadow: none;
@@ -33,7 +33,7 @@ div.line_container {
     width: 100%;
     height: 100%;
     box-sizing: border-box;
-    margin: 0pt;
+    margin: 0;
     padding: 24pt 12pt;
     border: #33006666 1pt solid;
 }
@@ -41,15 +41,15 @@ div.line_container {
 #root_div #root_page #word_count {
     position: absolute;
     display: flex;
-    left: 0pt;
-    bottom: 0pt;
+    left: 0;
+    bottom: 0;
     padding: 4pt;
     margin: 2pt;
     border-radius: 5pt;
     background-color: var(--art-bgcolor, #000000cc);
 }
 
-@media screen and not (min-width: 800px) {
+@media screen and (max-width: 800px) {
     div.line_container {
         flex-direction: column;
     }
@@ -153,24 +153,4 @@ h3 {
 #root_div article h3 {
     font-size: var(--font-size);
     text-indent: 0;
-}
-
-h1 {
-    font-family: "Noto Serif CJK SC", "思源宋体", "宋体";
-    font-size: 2.5em;
-    font-weight: 900;
-    margin-top: 0em;
-    margin-bottom: 12pt;
-}
-
-h2 {
-    font-size: 1.5em;
-    text-align: start;
-    text-indent: 2em;
-}
-
-h3 {
-    font-size: 1.2em;
-    text-align: start;
-    text-indent: 2em;
 }
